# IME

./: .gitignore  CMakeLists.txt  IME.pc.in  LICENSE  README.md
examples/: CMakeLists.txt
examples/space-invaders/: CMakeLists.txt
examples/space-invaders/resources/textFiles/: controls.txt  highscores.txt
examples/space-invaders/src/: SpaceInvaders.cpp  main.cpp
examples/space-invaders/src/entity/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  IMovableEntity.h  IWeaponOwner.h  LinearMover.cpp  LinearMover.h  Player.cpp  Player.h
examples/space-invaders/src/game/: SpaceInvaders.cpp  SpaceInvaders.h  SpaceInvadersGame.cpp  SpaceInvadersGame.h
examples/space-invaders/src/menu/: GameLoseMenu.cpp  GameLoseMenu.h  IMenu.cpp  PauseMenu.cpp
examples/space-invaders/src/states/: MainMenuState.cpp  MainMenuState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h  QuitingState.cpp  QuitingState.h
examples/super-pac-man/: CMakeLists.txt
examples/super-pac-man/src/: SuperPacMan.cpp  SuperPacMan.h  main.cpp
examples/super-pac-man/src/entity/: Ghost.h  PacMan.cpp  PacMan.h
examples/super-pac-man/src/states/: MainMenuState.cpp  MainMenuState.h
src/IME/: CMakeLists.txt
src/IME/common/: Dimensions.cpp  Object.cpp  Position.cpp  PrefContainer.cpp  Preference.cpp  PropertiesContainer.cpp  Property.cpp  PropertyContainer.cpp  Transform.cpp
src/IME/core/: AnimatableSprite.cpp  CollisionDetector.cpp  EntityCollisionManager.cpp  IEntity.cpp  Scoreboard.cpp  Sprite.cpp
src/IME/core/animation/: Animation.cpp  AnimationFrame.cpp  Animator.cpp
src/IME/core/audio/: Audio.cpp  AudioManager.cpp  AudioPlayer.cpp  Music.cpp  MusicPlayer.cpp  SoundEffect.cpp  SoundEffectPlayer.cpp
src/IME/core/engine/: Engine.cpp  State.cpp  StateManager.cpp
src/IME/core/entity/: Entity.cpp  GameObject.cpp  IEntity.cpp
src/IME/core/event/: EventDispatcher.cpp  EventEmitter.cpp
src/IME/core/game_object/: CollisionExcludeList.cpp  ExcludeList.cpp  GameObject.cpp
src/IME/core/grid/: Grid2D.cpp  Grid2DParser.cpp  Grid2DParser.h  Grid2DRenderer.cpp  Index.cpp
src/IME/core/input/: InputManager.cpp  Joystick.cpp  Keyboard.cpp  Mouse.cpp
src/IME/core/loop/: Engine.cpp  State.cpp  StateManager.cpp
src/IME/core/managers/: AudioManager.cpp  EventManager.cpp  InputManager.cpp  ResourceManager.cpp
src/IME/core/object/: ExcludeList.cpp  GameObject.cpp  GridObject.cpp  Object.cpp
src/IME/core/path/: AdjacencyList.cpp  BFS.cpp  DFS.cpp  IGridPathFinder.cpp  IPathFinderStrategy.cpp
src/IME/core/physics/: AIControlledGridMover.cpp  Body.cpp  BodyDefinition.cpp  CircleShape.cpp  CollisionDetector.cpp  ContactListener.cpp  Fixture.cpp  FixtureDefinition.cpp  GridMover.cpp  KeyboardControlledGridMover.cpp  PhysicsEngine.cpp  PhysicsWorld.cpp  PolygonShape.cpp  RandomGridMover.cpp  RectangleShape.cpp  RigidBodyPhysics.h  Shape.cpp  TargetGridMover.cpp  World.cpp
src/IME/core/resources/: DiskFileReader.cpp  FileReader.cpp  ResourceHolder.cpp  ResourceHolder.h  ResourceHolder.inl  ResourceLoader.cpp  ResourceManager.cpp  ResourceManager.h
src/IME/core/scene/: CameraContainer.cpp  GameObjectContainer.cpp  GridMoverContainer.cpp  RenderLayer.cpp  RenderLayerContainer.cpp  Scene.cpp  SceneManager.cpp  SceneManager.h  ShapeContainer.cpp  SpriteContainer.cpp
src/IME/core/states/: State.cpp  StateManager.cpp
src/IME/core/tile/: Tile.cpp  TileMap.cpp  TileMapParser.cpp
src/IME/core/tilemap/: Index.cpp  Tile.cpp  TileMap.cpp  TileMapParser.cpp  TileMapRenderer.cpp
src/IME/core/time/: Clock.cpp  Time.cpp  Timer.cpp  TimerManager.cpp
src/IME/event/: EventEmitter.cpp  EventEmitter.inl
src/IME/factory/: GuiFactory.inl
src/IME/graphics/: AnimatableSprite.cpp  Camera.cpp  Colour.cpp  DebugDrawer.cpp  DebugDrawer.h  Drawable.cpp  RenderTarget.cpp  RenderTarget.h  RenderTargetImpl.cpp  RenderTargetImpl.h  Sprite.cpp  SpriteImage.cpp  SpriteSheet.cpp  SpriteSheetContainer.cpp  Texture.cpp  TextureAtlas.cpp  Tile.cpp  Window.cpp  Window.h  WindowImpl.cpp  WindowImpl.h
src/IME/graphics/shapes/: CircleShape.cpp  ConvexShape.cpp  RectangleShape.cpp  Shape.cpp  ShapeImpl.h
src/IME/graphics/ui/: Gui.cpp  GuiContainer.cpp
src/IME/gui/common/: Colour.cpp
src/IME/gui/control/: Button.cpp  Caret.cpp  CheckBox.cpp  ClickableUIElement.cpp  Label.cpp  RectangleContainer.cpp  TextBlock.cpp  TextInput.cpp  UIElement.cpp
src/IME/gui/drawer/: Drawer.cpp
src/IME/gui/input/: Keyboard.cpp  Mouse.cpp
src/IME/gui/layout/: Canvas.cpp  DockPanel.cpp  Panel.cpp  StackPanel.cpp
src/IME/gui/window/: Window.cpp
src/IME/ui/: GuiContainer.cpp
src/IME/ui/renderers/: BoxLayoutRenderer.cpp  ButtonRenderer.cpp  CheckBoxRenderer.cpp  ChildWindowRenderer.cpp  EditBoxRenderer.cpp  LabelRenderer.cpp  MenuBarRenderer.cpp  MessageBoxRenderer.cpp  PanelRenderer.cpp  PictureRenderer.cpp  ProgressBarRenderer.cpp  RadioButtonRenderer.cpp  ScrollablePanelRenderer.cpp  SeparatorRenderer.cpp  SliderRenderer.cpp  SpinButtonRenderer.cpp  TabsRenderer.cpp
src/IME/ui/widgets/: BitmapButton.cpp  Button.cpp  CheckBox.cpp  ChildWindow.cpp  ClickableWidget.cpp  EditBox.cpp  HorizontalLayout.cpp  IBoxLayout.cpp  Label.cpp  MenuBar.cpp  MessageBox.cpp  Panel.cpp  Picture.cpp  ProgressBar.cpp  RadioButton.cpp  ScrollablePanel.cpp  Separator.cpp  Slider.cpp  (+8 more)
src/IME/utility/: Clock.cpp  ConfigFileParser.cpp  ConsoleLogger.cpp  DiskFileLogger.cpp  DiskFileReader.cpp  Helpers.cpp  Helpers.h  Helpers.inl  PropertiesContainer.cpp  Scoreboard.cpp  Timer.cpp  Utils.cpp
tests/: CMakeLists.txt  Test_Colour.cpp  Test_EventEmitter.cpp  Test_Keyboard.cpp  Test_Main.cpp  Test_Mouse.cpp  Test_Object.cpp  Test_PrefContainer.cpp  Test_Preference.cpp  Test_Property.cpp  Test_PropertyContainer.cpp  Test_Rect.cpp  Test_Timer.cpp  Test_Transform.cpp  Test_Vector2.cpp  WindowTests.hpp
tests/src/: DoctestMain.cpp  EventEmitterTests.hpp  unitTestsMain.cpp
tests/src/core/: AllCoreTests.h  EventEmitter.hpp  Tilemap.hpp  Timer.hpp
tests/src/event/: EventEmitterTests.hpp
tests/src/gui/: GuiTests.hpp  WindowTests.hpp
(+7502 files in other folders)
