
add_library(SOURCE_FILES
        examples/space-invaders/game/SpaceInvadersGame.cpp
examples/space-invaders/game/SpaceInvadersGame.h
examples/space-invaders/src/main.cpp
examples/space-invaders/src/entity/Player.cpp
examples/space-invaders/src/entity/Player.h
examples/space-invaders/src/entity/Enemy.cpp
examples/space-invaders/src/entity/Enemy.h
examples/space-invaders/src/entity/LinearMover.cpp
examples/space-invaders/src/entity/LinearMover.h
examples/space-invaders/src/entity/Bullet.cpp
examples/space-invaders/src/entity/Bullet.h)